# bottle-opener-with-counter

./: CMakeLists.txt  README.md  flash.c  flash.h  main.c  segment_display.c  segment_display.h
